# OpenFIRE-App

./: CMakeLists.txt  README.md  about.ui  constants.h  guiwindow.cpp  guiwindow.h  guiwindow.ui  main.cpp  vectors.qrc
.github/workflows/: cmake-multi-platform.yml
ico/: icon.rc
